# aicu-factory-oss

./: LICENSE  README.md
aicu-factory-oss-v0.1.2/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
aicu-factory-oss-v0.1.2/aicu_factory/: artifacts.py  cli.py  config.py  cost_guard.py  db.py  notifier.py  pipeline_registry.py  presets.py  status_board.py  telemetry.py  worker.py  z_orchestrator.py
aicu-factory-oss-v0.1.2/data/: sample_dataset.json  schema.json
aicu-factory-oss-v0.1.2/docs/: OPEN_SOURCE_NOTES.md  SANITIZATION.md
aicu-factory-oss-v0.1.2/examples/: sample_pipeline.py
aicu-factory-oss-v0.1.2/research/: experiment_protocol.md  paper_draft.md
aicu-factory-oss-v0.1.2/scripts/: export_dataset.py  upload_dataset.py  validate_dataset.py
aicu-factory-oss-v0.1.2/templates/z_orchestrator/manifests/: v018b_multil.json  v018b_multil_fine.json
aicu-factory-oss-v0.1.2/templates/z_orchestrator/samples/: run_report.md
aicu-factory-oss-v0.1.2/web/: index.html
