
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aicu-factory-oss"
version = "0.1.2"
description = "Local-first orchestration core for AI experiment, reporting, artifact workflows, and Z-Orchestrator style manifests."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Juan Adam"}]
license = {text = "MIT"}
dependencies = ["requests>=2.31.0"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["aicu_factory*"]
